# ManiaDrive

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  configure  editor_start.patch  install.sh  kids_mode.patch  kmz_2_tri.php  mania.h  mania2.c  mania_drive.c  mania_drive.story.beg  mania_drive.story.pro  php.ini
blender/oldies/: triEXP-full.py  tri_import_export.py
blender/startup/: tri_import_export_264.py
cmake/: FindALUT.cmake  FindODE.cmake  Info.plist.in  gen_php_config_h_in.sh  patch_zend_config.cmake
contrib/codeblocks/: README.TXT  raydium_appli.cbp  raydium_lib.cbp
contrib/codeblocks/win32/: raydium_appli.cbp  raydium_dll.cbp
debian/: changelog  changelog_original  control  maniadrive_editor.desktop  rules  start.sh  start_editor.sh
raydium/: common.h  config.h  gui.c  myglut-win32.c  object.c  ode.c  ode.h  php.c  render.c  shadow.c
raydium/headers/: file.h  gui.h  ode.h  particle2.h
rayphp/: libfile.php
